Bug 1319071 - Make crash minidumps use the same format for filenames on Linux as on other platforms; r=ted

This patch forks the breakpad files used for GUID generation and replaces them
with copies living together with the rest of the forked sources. Since other
files in the breakpad sources rely on the original files being present they
haven't been removed but we deliberately define their inclusion definitions in
the build system to prevent them from contributing to the build. This ensures
that we always use our own version of the GUID generator while not touching
the non-forked sources.

MozReview-Commit-ID: 5kW74yAPUDW